--- a/Practica4_Gabriel/app/src/main/res/layout/toast_personalizado.xml
+++ b/Practica4_Gabriel/app/src/main/res/layout/toast_personalizado.xml
@@ -1,19 +1,24 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
-    android:padding="12dp"
+    android:background="@drawable/toast_background"
+    android:padding="8dp"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
     <ImageView
         android:src="@drawable/icono"
         android:layout_width="24dp"
-        android:layout_height="24dp"/>
+        android:layout_height="24dp"
+        android:layout_gravity="center_vertical"/>
 
     <TextView
         android:id="@+id/txtToast"
+        android:text="Texto del toast"
         android:textColor="@android:color/white"
-        android:paddingLeft="8dp"
         android:textSize="14sp"
+        android:paddingLeft="8dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+
 </LinearLayout>
