--- a/Practica5/app/src/main/res/layout/fragment_one.xml
+++ b/Practica5/app/src/main/res/layout/fragment_one.xml
@@ -12,6 +12,7 @@
         android:hint="Nombre">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/etNombre"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
