--- a/Practica5/app/src/main/res/layout/activity_main.xml
+++ b/Practica5/app/src/main/res/layout/activity_main.xml
@@ -21,10 +21,19 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
+        <!-- ViewPager ocupa la pantalla cuando NO está la Agenda -->
         <androidx.viewpager.widget.ViewPager
             android:id="@+id/viewPager"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="0dp"
+            android:layout_weight="1" />
+
+        <FrameLayout
+            android:id="@+id/fragment_container"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:visibility="gone" />
 
     </LinearLayout>
 
